--- a/BONUS/Makefile
+++ b/BONUS/Makefile
@@ -1,19 +1,16 @@
 NAME = pipex
 
-SRCS = free.c ft_split.c handle_error.c \
-		path.c pipex_utils.c pipex.c	\
-		utils.c
-
-BONUS =	free_bonus.c ft_split_bonus.c handle_error_bonus.c \
+SRCS = free_bonus.c ft_split_bonus.c handle_error_bonus.c \
 		path_bonus.c pipex_utils_bonus.c pipex_bonus.c	\
-		utils_bonus.c
+		utils_bonus.c get_next_line_utils.c get_next_line.c \
+		here_doc.c
 
 OBJS  = $(SRCS:.c=.o)
 
 
 
 CC = cc
-CFLAG = -Wall -Wextra -Werror -Wunreachable-code
+# CFLAG = -Wall -Wextra -Werror -Wunreachable-code
 CFLAG = -g
 all: $(NAME)
 
